objects/Condition_Occurrence__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Base_Multiple__c</fullName>
        <label>Actual Base Multiple</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Base_Number__c</fullName>
        <label>Actual Base Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Base_Percentage__c</fullName>
        <label>Actual Base Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Base_Range_Multiple_From__c</fullName>
        <label>Actual Base Range Multiple</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Base_Range_Multiple_To__c</fullName>
        <label>Actual Base Range Multiple To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Base_Range_Percent_From__c</fullName>
        <label>Actual Base Range Percent From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Base_Range_Percent_To__c</fullName>
        <label>Actual Base Range Percent To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Base_Range_Ratio_Calc_Two__c</fullName>
        <formula>Actual_Base_Ratio_From__c  *  Required_Base_Range_Ratio_To_Two_Num__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Base Range Ratio Calc Two</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Base_Range_Ratio_Calc__c</fullName>
        <formula>Actual_Base_Ratio_From__c * Required_Base_Range_Ratio_To_Num__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Base Range Ratio Calculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Base_Range_Ratio_From__c</fullName>
        <label>Actual Base Range Ratio From</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Base_Range_Ratio_To__c</fullName>
        <label>Actual Base Range Ratio To</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Base_Ratio_From__c</fullName>
        <label>Actual Base Ratio From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Base_Ratio_To__c</fullName>
        <label>Actual Base Ratio To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Base__c</fullName>
        <formula>Condition__r.Actual_Base__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Other__c</fullName>
        <label>Actual Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual__c</fullName>
        <formula>CASE (
  Threshold_Category_Text__c, 
  &quot;Multiple&quot;, TEXT(Actual_Base_Multiple__c),
  &quot;Percentage&quot;, TEXT(Actual_Base_Percentage__c*100)+&quot;%&quot;,
  &quot;Ratio&quot;, TEXT(Actual_Base_Ratio_From__c)+&quot;:&quot;+TEXT(Actual_Base_Ratio_To__c),
  &quot;Number&quot;, TEXT(Actual_Base_Number__c),
  &quot;Other&quot;, Actual_Other__c ,
  &quot;&quot;
)</formula>
        <label>Actual</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <formula>Condition__r.Agreement__r.Agreement_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <formula>Condition__r.Agreement__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_Documents_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Box Documents Uploaded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calculated_Ratio_A__c</fullName>
        <formula>Actual_Base_Ratio_From__c * Required_Base_Ratio_To_Num__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Base Ratio Calculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculated_Value__c</fullName>
        <label>Calculated Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clause__c</fullName>
        <label>Clause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Condition_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Condition Party</label>
        <referenceTo>Condition_Party__c</referenceTo>
        <relationshipLabel>Condition Occurrences</relationshipLabel>
        <relationshipName>Condition_Occurrences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <referenceTo>Condition__c</referenceTo>
        <relationshipName>Conditions_Due</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Coverage_Area__c</fullName>
        <formula>Deal1__r.TMG_Product_Level_1__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coverage Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_in_Status__c</fullName>
        <formula>TODAY() - DATEVALUE( Status_Change_Stamp__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Condition Occurrences</relationshipLabel>
        <relationshipName>Condition_Occurrences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <formula>Condition__r.Matter__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>TEXT(Condition__r.Matter__r.Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Description__c</fullName>
        <label>Document Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Status__c</fullName>
        <label>Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Document Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalConditionOccurrenceId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalConditionOccurrenceId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Chased_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Chased By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Conditions_Due1_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Chased_On__c</fullName>
        <label>Last Chased On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Margin_Ratchet_Name__c</fullName>
        <formula>Condition__r.Margin_Ratchet_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin Ratchet Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin_Ratchet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Margin Ratchet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Participant_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Conditions_Due</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Responsible</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>advpm__Participant__c.advpm__Matter__c</field>
                <operation>equals</operation>
                <valueField>$Source.Deal1__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>advpm__Participant__c</referenceTo>
        <relationshipLabel>Condition Occurrences</relationshipLabel>
        <relationshipName>Condition_Occurrences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Area__c</fullName>
        <formula>Deal1__r.TMG_Product_Level_2__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Deal1__r.TMG_Product_Level_3__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Product Grouping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receive_Notifications__c</fullName>
        <formula>Condition_Party__r.Agreement_Party__r.Deal_Party__r.Receive_Notification__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Receive Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship_Consolidated__c</fullName>
        <label>Relationship(s)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <formula>Condition_Party__r.Relationship__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Base_Multiple_Num__c</fullName>
        <label>Required Base Multiple</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base_Number__c</fullName>
        <label>Required Base Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base_Percentage_Num__c</fullName>
        <label>Required Base Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Required_Base_Range_Multiple_From_Num__c</fullName>
        <label>Required Base Range Multiple From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base_Range_Multiple_To_Num__c</fullName>
        <label>Required Base Range Multiple To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base_Range_Number_From__c</fullName>
        <label>Required Base Range Number From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base_Range_Number_To__c</fullName>
        <label>Required Base Range Number To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base_Range_Percentage_From_Num__c</fullName>
        <label>Required Base Range Percentage From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Required_Base_Range_Percentage_To_Num__c</fullName>
        <label>Required Base Range Percentage To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Required_Base_Range_Ratio_Calc_Two__c</fullName>
        <formula>Required_Base_Range_Ratio_From_Two_Num__c * Actual_Base_Ratio_To__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Required Base Range Ratio Calc Two</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base_Range_Ratio_Calc__c</fullName>
        <formula>Required_Base_Range_Ratio_From_Num__c  *  Actual_Base_Ratio_To__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Required Base Range Ratio Calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base_Range_Ratio_From_Num__c</fullName>
        <label>Required Base Range Ratio From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base_Range_Ratio_From_Two_Num__c</fullName>
        <label>Required Base Range Ratio From Two</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base_Range_Ratio_To_Num__c</fullName>
        <label>Required Base Range Ratio To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base_Range_Ratio_To_Two_Num__c</fullName>
        <label>Required Base Range Ratio To Two</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base_Ratio_Calc__c</fullName>
        <formula>Required_Base_Ratio_From_Num__c  * Actual_Base_Ratio_To__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Required Base Ratio Calculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base_Ratio_From_Num__c</fullName>
        <label>Required Base Ratio From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base_Ratio_To_Num__c</fullName>
        <label>Required Base Ratio To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base_Ratio__c</fullName>
        <label>Required Base Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Base__c</fullName>
        <label>Required Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Other__c</fullName>
        <label>Required Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <formula>IF(
  Threshold_Type_Text__c == &apos;Base Range&apos;,
  CASE (
    Threshold_Category_Text__c, 
    &quot;Multiple&quot;, TEXT(Required_Base_Range_Multiple_From_Num__c)+&quot; - &quot;+TEXT(Required_Base_Range_Multiple_To_Num__c),
    &quot;Percentage&quot;, TEXT( Required_Base_Range_Percentage_From_Num__c *100)+&quot;%&quot;+&quot; - &quot;+TEXT(Required_Base_Range_Percentage_To_Num__c *100)+&quot;%&quot;,
    &quot;Ratio&quot;, TEXT(Required_Base_Range_Ratio_From_Num__c)+&quot;:&quot;+TEXT( Required_Base_Range_Ratio_To_Num__c)+&quot; - &quot;+TEXT(  Required_Base_Range_Ratio_From_Two_Num__c )+&quot;:&quot;+TEXT(  Required_Base_Range_Ratio_To_Two_Num__c),
    &quot;Number&quot;, TEXT(Required_Base_Range_Number_From__c)+&quot; - &quot;+TEXT(Required_Base_Range_Number_To__c),
    &quot;Other&quot;,Required_Other__c,
    &quot;&quot;
  ),
  CASE (
    Threshold_Category_Text__c, 
    &quot;Multiple&quot;, TEXT(Required_Base_Multiple_Num__c ),
    &quot;Percentage&quot;, TEXT(Required_Base_Percentage_Num__c*100)+&quot;%&quot;,
    &quot;Ratio&quot;, TEXT(Required_Base_Ratio_From_Num__c)+&quot;:&quot;+TEXT(Required_Base_Ratio_To_Num__c),
    &quot;Number&quot;, TEXT(Required_Base_Number__c),
    &quot;Other&quot;,  Required_Other__c ,
    &quot;&quot;
  )
)</formula>
        <label>Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Conditions_Due2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Text__c</fullName>
        <label>Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_User__c</fullName>
        <label>Source User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Change_Stamp__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Status Change Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Breached</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Condoned</fullName>
                </value>
                <value>
                    <fullName>Condoned Breaches</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Fulfilled</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Met</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Not Condoned Breaches</fullName>
                </value>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Overdue</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Upcoming</fullName>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
                <value>
                    <fullName>Compliant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supporting_Documentation_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supporting Documentation Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Threshold_Category_Text__c</fullName>
        <label>Threshold Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Threshold_Comparator_Text__c</fullName>
        <label>Threshold Comparator</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Threshold_Type_Text__c</fullName>
        <label>Threshold Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Condition Occurrence</label>
    <listViews>
        <fullName>All_Condition_Occurrences</fullName>
        <columns>NAME</columns>
        <columns>Condition__c</columns>
        <columns>Deal__c</columns>
        <columns>Relationship__c</columns>
        <columns>Agreement__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Due_Date__c</columns>
        <columns>Last_Chased_By__c</columns>
        <columns>Last_Chased_On__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Condition Occurrences</label>
    </listViews>
    <listViews>
        <fullName>All_Condition_Precedents</fullName>
        <columns>NAME</columns>
        <columns>Condition__c</columns>
        <columns>Deal__c</columns>
        <columns>Agreement__c</columns>
        <columns>Relationship__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Responsible_Person__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Condition_Occurrence__c.Condition_Precedent</value>
        </filters>
        <label>All Condition Precedents</label>
    </listViews>
    <listViews>
        <fullName>All_Financial_Covenants</fullName>
        <columns>NAME</columns>
        <columns>Condition__c</columns>
        <columns>Deal__c</columns>
        <columns>Agreement__c</columns>
        <columns>Relationship__c</columns>
        <columns>Last_Chased_By__c</columns>
        <columns>Last_Chased_On__c</columns>
        <columns>Division__c</columns>
        <columns>Coverage_Area__c</columns>
        <columns>Product_Area__c</columns>
        <columns>Responsible_Person__c</columns>
        <columns>Status__c</columns>
        <columns>Margin_Ratchet__c</columns>
        <columns>Source_Text__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Condition_Occurrence__c.Financial_Covenant</value>
        </filters>
        <label>All Financial Covenants</label>
    </listViews>
    <listViews>
        <fullName>All_Governance_Checks</fullName>
        <columns>NAME</columns>
        <columns>Condition__c</columns>
        <columns>Deal__c</columns>
        <columns>Relationship__c</columns>
        <columns>Agreement__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Last_Chased_By__c</columns>
        <columns>Last_Chased_On__c</columns>
        <columns>Status__c</columns>
        <columns>Responsible_Person__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Condition_Occurrence__c.Governance_Check</value>
        </filters>
        <label>All Governance Checks</label>
    </listViews>
    <listViews>
        <fullName>All_Information_Undertakings</fullName>
        <columns>NAME</columns>
        <columns>Condition__c</columns>
        <columns>Deal__c</columns>
        <columns>Relationship__c</columns>
        <columns>Agreement__c</columns>
        <columns>Last_Chased_By__c</columns>
        <columns>Last_Chased_On__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Responsible_Person__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Condition_Occurrence__c.Information_Undertaking</value>
        </filters>
        <label>All Information Undertakings</label>
    </listViews>
    <listViews>
        <fullName>Upcoming_Conditions_Occurrence</fullName>
        <columns>NAME</columns>
        <columns>Deal__c</columns>
        <columns>Relationship__c</columns>
        <columns>Agreement__c</columns>
        <columns>Condition__c</columns>
        <columns>Responsible_Person__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress,New</value>
        </filters>
        <label>Upcoming Conditions Occurrence</label>
    </listViews>
    <nameField>
        <label>Condition Occurrence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Condition Occurrences</pluralLabel>
    <recordTypes>
        <fullName>Condition_Precedent</fullName>
        <active>true</active>
        <label>Condition Precedent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Financial_Covenant</fullName>
        <active>true</active>
        <label>Financial Covenant</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Undertaking</fullName>
        <active>true</active>
        <label>General Undertaking</label>
    </recordTypes>
    <recordTypes>
        <fullName>Governance_Check</fullName>
        <active>true</active>
        <label>Governance Check</label>
    </recordTypes>
    <recordTypes>
        <fullName>Information_Undertaking</fullName>
        <active>true</active>
        <label>Information Undertaking</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Capture_Comments_BaseRange_Multi_Breach</fullName>
        <active>true</active>
        <description>Please ensure that you have capture comments.</description>
        <errorConditionFormula>If(Threshold_Type_Text__c = &quot;Base Range&quot; &amp;&amp; Threshold_Category_Text__c= &quot;Multiple&quot; &amp;&amp; ISBLANK(Comments__c) &amp;&amp; NOT(ISBLANK(Actual_Base_Multiple__c)) &amp;&amp; (Actual_Base_Multiple__c  &lt; Required_Base_Range_Multiple_From_Num__c || Actual_Base_Multiple__c &gt;  Required_Base_Range_Multiple_To_Num__c) , True, False )</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>Please ensure that you have capture comments</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Capture_Comments_BaseRange_Perc_Breach</fullName>
        <active>true</active>
        <description>Please ensure that you have capture comments.</description>
        <errorConditionFormula>If(Threshold_Type_Text__c = &quot;Base Range&quot; &amp;&amp; Threshold_Category_Text__c= &quot;Percentage&quot; &amp;&amp; ISBLANK( Comments__c )&amp;&amp; NOT(ISBLANK(Actual_Base_Percentage__c)) &amp;&amp; (Actual_Base_Percentage__c  &lt; Required_Base_Range_Percentage_From_Num__c || Actual_Base_Percentage__c &gt;  Required_Base_Range_Percentage_To_Num__c) , True, False )</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>Please ensure that you have capture comments</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Capture_Comments_BaseRange_Ratio_Breach</fullName>
        <active>true</active>
        <description>Please ensure that you have capture comments.</description>
        <errorConditionFormula>If(Threshold_Type_Text__c = &quot;Base Range&quot;  &amp;&amp; Threshold_Category_Text__c= &quot;Ratio&quot; &amp;&amp;  ISBLANK(Comments__c) &amp;&amp; Actual_Base_Range_Ratio_Calc__c &gt; 0 &amp;&amp;  Actual_Base_Range_Ratio_Calc__c   &lt; Required_Base_Range_Ratio_Calc__c  || Actual_Base_Range_Ratio_Calc_Two__c  &gt; Required_Base_Range_Ratio_Calc_Two__c ,True,False)</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>Please ensure that you have capture comments</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Capture_Comments_Base_Ratio_Breach</fullName>
        <active>true</active>
        <description>Please ensure that you have capture comments.</description>
        <errorConditionFormula>If (Threshold_Type_Text__c = &quot;Base&quot; &amp;&amp; Threshold_Comparator_Text__c = &quot;equals&quot; &amp;&amp; ( Threshold_Category_Text__c= &quot;Ratio&quot;) &amp;&amp; (Calculated_Ratio_A__c&gt;0)&amp;&amp; NOT(Calculated_Ratio_A__c =  Required_Base_Ratio_Calc__c ) &amp;&amp;  ISBLANK(Comments__c) , True,

If (Threshold_Type_Text__c = &quot;Base&quot; &amp;&amp; Threshold_Comparator_Text__c = &quot;not equal to&quot;&amp;&amp; ( Threshold_Category_Text__c= &quot;Ratio&quot;) &amp;&amp; (Calculated_Ratio_A__c&gt;0) &amp;&amp; NOT(Calculated_Ratio_A__c &lt;&gt; Required_Base_Ratio_Calc__c)&amp;&amp;  ISBLANK(Comments__c), True,

If  (Threshold_Type_Text__c = &quot;Base&quot; &amp;&amp; Threshold_Comparator_Text__c = &quot;less than&quot; &amp;&amp; ( Threshold_Category_Text__c = &quot;Ratio&quot;) &amp;&amp; (Calculated_Ratio_A__c&gt;0)&amp;&amp; NOT(Calculated_Ratio_A__c   &lt; Required_Base_Ratio_Calc__c)&amp;&amp;  ISBLANK(Comments__c), True,

If  (Threshold_Type_Text__c = &quot;Base&quot;&amp;&amp;Threshold_Comparator_Text__c = &quot;greater than&quot; &amp;&amp; ( Threshold_Category_Text__c= &quot;Ratio&quot;) &amp;&amp; (Calculated_Ratio_A__c&gt;0)&amp;&amp; NOT(Calculated_Ratio_A__c  &gt; Required_Base_Ratio_Calc__c)&amp;&amp;  ISBLANK(Comments__c), True,

If  (Threshold_Type_Text__c = &quot;Base&quot;&amp;&amp;Threshold_Comparator_Text__c = &quot;less or equal&quot; &amp;&amp; ( Threshold_Category_Text__c = &quot;Ratio&quot;) &amp;&amp; (Calculated_Ratio_A__c&gt;0)&amp;&amp; NOT(Calculated_Ratio_A__c  &lt;= Required_Base_Ratio_Calc__c ) &amp;&amp;  ISBLANK(Comments__c),True, false)))))</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>Please ensure that you have capture comments</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Capture_Comments_Multiples_Breached</fullName>
        <active>true</active>
        <description>Please ensure that you have captured comments.</description>
        <errorConditionFormula>If(NOT(ISBLANK(Actual_Base_Multiple__c )) &amp;&amp; Threshold_Type_Text__c = &quot;Base&quot; &amp;&amp; Threshold_Comparator_Text__c = &quot;equals&quot; &amp;&amp; ( Threshold_Category_Text__c = &quot;Multiple&quot;)&amp;&amp;  NOT(Actual_Base_Multiple__c  = Required_Base_Multiple_Num__c ) &amp;&amp; ISBLANK( Comments__c ),True,   

If(NOT(ISBLANK(Actual_Base_Multiple__c ))&amp;&amp;Threshold_Type_Text__c = &quot;Base&quot; &amp;&amp; Threshold_Comparator_Text__c = &quot;not equal to&quot;&amp;&amp; ( Threshold_Category_Text__c = &quot;Multiple&quot;) &amp;&amp; NOT(Actual_Base_Multiple__c  &lt;&gt; Required_Base_Multiple_Num__c ) &amp;&amp; ISBLANK( Comments__c ) , True,   

If(NOT(ISBLANK(Actual_Base_Multiple__c ))&amp;&amp;Threshold_Type_Text__c = &quot;Base&quot; &amp;&amp; Threshold_Comparator_Text__c = &quot;less than&quot; &amp;&amp; ( Threshold_Category_Text__c = &quot;Multiple&quot;)&amp;&amp; NOT(Actual_Base_Multiple__c  &lt; Required_Base_Multiple_Num__c )&amp;&amp; ISBLANK( Comments__c ) , True,   

If  (NOT(ISBLANK(Actual_Base_Multiple__c ))&amp;&amp;Threshold_Type_Text__c = &quot;Base&quot; &amp;&amp; Threshold_Comparator_Text__c = &quot;greater than&quot;&amp;&amp; ( Threshold_Category_Text__c= &quot;Multiple&quot;) &amp;&amp; NOT(Actual_Base_Multiple__c  &gt; Required_Base_Multiple_Num__c ) &amp;&amp; ISBLANK( Comments__c ), True,   

If  (NOT(ISBLANK(Actual_Base_Multiple__c ))&amp;&amp;Threshold_Type_Text__c = &quot;Base&quot; &amp;&amp; Threshold_Comparator_Text__c = &quot;less or equal&quot;&amp;&amp; ( Threshold_Category_Text__c= &quot;Multiple&quot;)&amp;&amp; NOT(Actual_Base_Multiple__c   &lt;= Required_Base_Multiple_Num__c )&amp;&amp; ISBLANK( Comments__c ) , True, 

If(NOT(ISBLANK(Actual_Base_Multiple__c ))&amp;&amp;Threshold_Type_Text__c = &quot;Base&quot; &amp;&amp; Threshold_Comparator_Text__c = &quot;greater or equal&quot; &amp;&amp; ( Threshold_Category_Text__c= &quot;Multiple&quot;)&amp;&amp; NOT(Actual_Base_Multiple__c   &gt;= Required_Base_Multiple_Num__c )&amp;&amp; ISBLANK( Comments__c ) , True, false))))))</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>Please ensure that you have captured comments.</errorMessage>
    </validationRules>
</CustomObject>